--- a/SMS/Views/Home/Index.cshtml
+++ b/SMS/Views/Home/Index.cshtml
@@ -12,34 +12,31 @@
             <button type="submit">Login</button>
         </form>
     </div>
-    <div class="reg-form">
-        <form class="form-inline" action="/action_page.php">
-            <label for="fname" class="mr-sm-2">First Name:</label>
-            <input type="fname" class="form-control mb-2 mr-sm-2" placeholder="Enter first name" id="fname">
-            <label for="lname" class="mr-sm-2">Last Name:</label>
-            <input type="lname" class="form-control mb-2 mr-sm-2" placeholder="Enter last name" id="lname">
-            <label for="email" class="mr-sm-2">Email address:</label>
-            <input type="email" class="form-control mb-2 mr-sm-2" placeholder="Enter email" id="email">
-            <label for="mobile" class="mr-sm-2">Mobile:</label>
-            <input type="phone" class="form-control mb-2 mr-sm-2" placeholder="Enter mobile" id="mobile">
-            <label for="city" class="mr-sm-2">City:</label>
-            <input type="city" class="form-control mb-2 mr-sm-2" placeholder="Enter city" id="city">
-            <label for="dob" class="mr-sm-2">Birth Of Date:</label>
-            <input type="date" class="form-control mb-2 mr-sm-2" placeholder="Enter dob" id="dob">
-            <label for="uname" class="mr-sm-2">User Name:</label>
-            <input type="uname" class="form-control mb-2 mr-sm-2" placeholder="Enter user name" id="fname">
-            <label for="pwd" class="mr-sm-2">Password:</label>
-            <input type="password" class="form-control mb-2 mr-sm-2" placeholder="Enter password" id="pwd">
-            <label for="pwd" class="mr-sm-2">Confirm Password:</label>
-            <input type="password" class="form-control mb-2 mr-sm-2" placeholder="Enter password" id="pwd">
-            <div class="form-check mb-2 mr-sm-2">
-                <label class="form-check-label">
-                    <input class="form-check-input" type="checkbox"> Remember me
-                </label>
-            </div>
-            <button type="submit" class="btn btn-primary mb-2">Submit</button>
-        </form>
-    </div>
 </div>
+<div class="reg-form">
+    <p class="p fw-bold">Create New Account</p>
+    <form class="form-inline rform" action="/action_page.php">
+        <label for="fname" class="mr-sm-2 small">First Name:</label>
+        <input type="fname" class="form-control mb-2 mr-sm-2" placeholder="Enter first name" id="fname">
+        <label for="lname" class="mr-sm-2 small">Last Name:</label>
+        <input type="lname" class="form-control mb-2 mr-sm-2" placeholder="Enter last name" id="lname">
+        <label for="email" class="mr-sm-2 small">Email address:</label>
+        <input type="email" class="form-control mb-2 mr-sm-2" placeholder="Enter email" id="email">
+        <label for="mobile" class="mr-sm-2 small">Mobile:</label>
+        <input type="phone" class="form-control mb-2 mr-sm-2" placeholder="Enter mobile" id="mobile">
+        <label for="city" class="mr-sm-2 small">City:</label>
+        <input type="city" class="form-control mb-2 mr-sm-2" placeholder="Enter city" id="city">
+        <label for="dob" class="mr-sm-2 small">Birth Of Date:</label>
+        <input type="date" class="form-control mb-2 mr-sm-2" placeholder="Enter dob" id="dob">
+        <label for="uname" class="mr-sm-2 small">User Name:</label>
+        <input type="uname" class="form-control mb-2 mr-sm-2" placeholder="Enter user name" id="fname">
+        <label for="pwd" class="mr-sm-2 small">Password:</label>
+        <input type="password" class="form-control mb-2 mr-sm-2" placeholder="Enter password" id="pwd">
+        <label for="pwd" class="mr-sm-2 small">Confirm Password:</label>
+        <input type="password" class="form-control mb-2 mr-sm-2" placeholder="Enter password" id="pwd">
+        <button type="submit" class="btn btn-primary mb-2">Register</button>
+    </form>
+</div>
+
 
 
